--- a/Funnel.html
+++ b/Funnel.html
@@ -8,7 +8,7 @@
   <!-- Meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#1abc9c" id="meta-theme-color" />
-  <meta property="og:url" content="https://mixtuti.github.io/Reference" />
+  <meta property="og:url" content="https://mixtuti.github.io/Reference/Funnel.html" />
   <meta property="og:title" content="コードリファレンス" />
   <meta property="og:type" content="website" />
   <meta name="”keywords”" content="コード、リファレンス">
@@ -31,7 +31,7 @@
     <input type="text" id="labelSearch" placeholder="例: static">
   </div>
 
-  <div class="scrollable-content">
+<!--   <div class="scrollable-content">
     <div class="method-block" data-class="AnimationCreator" data-method="ShowWindow" data-labels="public static MenuItem">
       <div class="method-header">ShowWindow()</div>
       <div class="method-content">
@@ -48,7 +48,7 @@
           <strong>戻り値:</strong> なし（<code>void</code>）
         </div>
       </div>
-    </div>
+    </div> -->
 
   <script src="js/reference-filter.js"></script>
 
